ghc-6.2/hslibs/win32/Win32Dialogue_stub_ffi.h

extern void * prim_mkResource(int arg1);
extern void* prim_dialogBox(HINSTANCE hInst,LPCTSTR lpTemp,HWND hWndParent,void * diaFun);
extern int access_prim_dialogBox_res1(HsPtr);
extern int access_prim_dialogBox_gc_failed(HsPtr);
extern void* access_prim_dialogBox_gc_failstring(HsPtr);
extern void* prim_dialogBoxParam(HINSTANCE hInst,LPCTSTR lpTemp,HWND hWndParent,void * diaFun,LPARAM dwInit);
extern int access_prim_dialogBoxParam_res1(HsPtr);
extern int access_prim_dialogBoxParam_gc_failed(HsPtr);
extern void* access_prim_dialogBoxParam_gc_failstring(HsPtr);
extern void* prim_dialogBoxIndirect(HINSTANCE hInst,void * lpTemp,HWND hWndParent,void * diaFun);
extern int access_prim_dialogBoxIndirect_res1(HsPtr);
extern int access_prim_dialogBoxIndirect_gc_failed(HsPtr);
extern void* access_prim_dialogBoxIndirect_gc_failstring(HsPtr);
extern void* prim_dialogBoxIndirectParam(HINSTANCE hInst,void * lpTemp,HWND hWndParent,void * diaFun,LPARAM dwInit);
extern int access_prim_dialogBoxIndirectParam_res1(HsPtr);
extern int access_prim_dialogBoxIndirectParam_gc_failed(HsPtr);
extern void* access_prim_dialogBoxIndirectParam_gc_failstring(HsPtr);
extern void * prim_getFinalDialog(void * arg1);
extern void * prim_mkDiaTemplate(int arg1,int arg2,int arg3,int arg4,int arg5,DWORD arg6,DWORD arg7,void * arg8,void * arg9,void * arg10,void * arg11,int arg12);
extern void * prim_addDiaControl(void * arg1,void * arg2,int arg3,void * arg4,DWORD arg5,int arg6,int arg7,int arg8,int arg9,DWORD arg10);
extern void * prim_toUnicodeStr(char * arg1);